fix font color in dark mode

--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -26,8 +26,8 @@
 
   :root {
     --bg-color: #000;
-    --gray-dark: lighten(black, 85%);
-    --gray-light: lighten(black, 60%);
+    --gray-dark: lighten(black, 80%);
+    --gray-light: lighten(black, 55%);
 
     --faded-bg-color: rgba(40, 40, 40, 0.9);
     --slight-bg-color: lighten(#000, 10%);
